# netatmo-auth-cli

./: .gitignore  Cargo.toml  Cross.toml  README.md
src/: main.rs
