[package]
name = "netatmo-auth-cli"
version = "0.2.0"
authors = ["Tomas Vecera <info@tomasvecera.cz>"]
description = """
Simple Netatmo Connect APIs oauth client.
"""
license = "MIT OR Apache-2.0"
keywords = ["netatmo", "oauth", "cli"]
edition = "2021"

[dependencies]
structopt = "0.3.26"
structopt-flags = "0.3.6"
rocket = "0.5.0-rc.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.37"
uuid = {version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"]}
